# nurgle

./: .gitignore  CMakeLists.txt  README.md
notebooks/: CMakeLists.txt  index.ipynb  ipython_nbconvert_config.py
nurgle/: CMakeLists.txt  csv.hpp  defs.hpp  event_scheduler.hpp  logger.cpp  logger.hpp  metabolism.hpp  ode.hpp  pool.hpp  utility.hpp  world.hpp
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
